[package]
name = "rscountries"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
futures = "0.3.27"